# isimud

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml
ifpeek/: __init__.py  ifpeek.py  scan.py
isimud/: __init__.py  isimud.py  scan.py
tests/: conftest.py  test_ifpeek.py  test_isimud.py  test_scan.py
