[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "isimud"
version = "0.4"
description = "Package to get commonly used details of the network interface and access points you are using."
readme = "README.md"
license = "MIT"
authors = [
    {name = "Carlos A. Planchón", email = "carlosandresplanchonprestes@gmail.com"}
]
keywords = ["isimud", "sensors", "wifi", "networking"]
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]
requires-python = ">=3.10"
dependencies = [
    "netifaces",
    "pyroute2",
]

[project.urls]
Repository = "https://github.com/carlosplanchon/isimud"

[tool.setuptools]
packages = ["isimud"]
