[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ifpeek"
version = "0.5"
description = "Inspect Linux network interfaces, Wi-Fi state, routes, DNS, and network events from Python."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Carlos A. Planchón", email = "carlosandresplanchonprestes@gmail.com"}
]
keywords = ["linux", "networking", "netlink", "nl80211", "pyroute2", "wifi", "network-interfaces"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Networking",
    "Topic :: System :: Networking :: Monitoring",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]
requires-python = ">=3.10"
dependencies = [
    "pyroute2",
]

[project.urls]
Homepage = "https://github.com/carlosplanchon/ifpeek"
Repository = "https://github.com/carlosplanchon/ifpeek"

[project.optional-dependencies]
# Optional: Wi-Fi access-point scanning via a Wi-Fi daemon (iwd, NetworkManager, or wpa_supplicant) over D-Bus.
scan = [
    "jeepney>=0.8",
]
dev = [
    "pytest>=9.1",
    "pytest-cov>=7.1",
    "jeepney>=0.8",
]

[tool.setuptools]
packages = ["ifpeek"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=ifpeek",
    "--cov-report=term-missing",
]
